# haywire

./: .gitignore  .gitmodules  CLAUDE.md  CLEANUP_PLAN.md  CMakeLists.txt  VM_INJECTION_TECHNIQUES.md  beacon_client  beacon_discovery  beacon_scanner  check_video_memory.sh  companion_camera  companion_camera_v2  companion_hints  companion_multi  companion_pid  companion_riff  companion_roundrobin  companion_selftest  companion_triggered.c  companion_v2  companion_with_hints  deploy_and_test.sh  deploy_camera.sh  deploy_companion_v2.sh  display_memory.py  find_active_framebuffer.py  find_elf_sections.py  find_memory_structures.py  find_processes_qmp  find_processes_qmp.cpp  find_video_memory.py  findingOffsets.md  haywire.entitlements  haywire_client  imgui.ini  kaslr_workarounds.md  scan_for_video.py  scan_memory_regions.py  search_pids  search_pids.cpp  (+48 more)
HW new formats/: EncodeExcerpts.cpp  VMRAMDumpers.cpp
docs/: README.md  address_notation.md  beacon_architecture_current.md  beacon_protocol_design.md  build_qemu.md  complete_pgd_mappings.txt  gpu_memory_introspection.md  init_task_finding.md  inspector_fix.md  kernel_memory_findings.md  kernel_pte_discovery_lessons.md  kernel_structs.md  kernel_va_translation_kpti.md  macos_guest_challenges.md  memory-map-visual.md  mini_bitmap_viewers_design.md  mini_bitmap_viewers_tasks.md  origHayWireRenderScheme.txt  page_cache_btf_approach.md  process_memory_chain.md  qemu_memory_introspection.md  rendering_pipeline.md  shared_memory_protocol.md  swapper_pgd_mappings.md  unmapped_pages_discovery.md  vm_setup_guide.md  vmalloc_analysis.md
examples/: platform_usage_example.cpp
include/: address_parser.h  address_space_flattener.h  arm64_page_walker.h  autocorrelator.h  beacon_decoder.h  beacon_encoder.h  beacon_protocol.h  beacon_reader.h  beacon_translator.h  beacon_types.h  binary_loader.h  bitmap_viewer.h  common.h  crunched_memory_reader.h  file_browser.h  file_memory_source.h  font5x7u.h  font5x7u_array.inc  font5x7u_data.cpp  font_data.h  gdb_connection.h  guest_agent.h  hex_overlay.h  macos_mapped_file_enumerator.h  mapped_file_memory_source.h  memory_backend.h  memory_data_source.h  memory_mapper.h  memory_overview.h  memory_renderer.h  memory_scanner.h  memory_utils.h  memory_visualizer.h  mmap_reader.h  omega64.h  pagemap_cache.h  pid_selector.h  plugin_cache_client.h  process_memory_map.h  qemu_connection.h  (+4 more)
include/platform/: page_walker.h  platform_detector.h  process_detail_collector.h  process_info_extended.h  process_walker.h
qemu-mods/: .gitignore  README.md  REBUILD_CHECKLIST.md  build-qemu.sh  build_and_sign.sh  dev-setup.sh  find_init_task_kallsyms.sh  find_offsets.c  get_symbols_methods.sh  integrate_haywire.patch  qemu-va2pa.patch  quick-rebuild.sh  sw_ttbr0_pan_explanation.md  update-patch.sh
qemu_plugin/: arm64_pagewalk.c  haywire_plugin.c  pagetable_cache.c
qga-fast-monitor/common/: protocol.h
qga-fast-monitor/guest/: qga-fast-companion.c
scripts/: alpine_quick_setup.sh  alpine_setup_commands.txt  launch_alpine_vlc.sh  launch_qemu_clean.sh  launch_qemu_membackend.sh  launch_qemu_membackendB4.sh  launch_qemu_overlay.sh  launch_qemu_tcg.sh  launch_qemu_vlc.sh  launch_simple_vlc.sh  launch_tinycore_vlc.sh  launch_ubuntu_arm64.sh  launch_ubuntu_arm64_gdb.sh  launch_ubuntu_fast.sh  launch_ubuntu_highmem_off.sh  launch_ubuntu_vlc.sh  serve_files.sh  setup_alpine_vlc.sh  vlc_minimal.sh
src/: address_parser.cpp  address_space_flattener.cpp  arm64_page_walker.cpp  autocorrelator.cpp  beacon_client.cpp  beacon_decoder.cpp  beacon_discovery.cpp  beacon_map.h  beacon_reader.cpp  beacon_reader_fixed.cpp  beacon_reader_v2.cpp  beacon_scanner.cpp  beacon_translator.cpp  binary_loader.cpp  bitmap_viewer.cpp  companion.c  companion_benchmark.c  companion_camera.c  companion_camera_v2.c  companion_hints.c  companion_macos.c  companion_multi.c  companion_oneshot.c  companion_pid.c  companion_riff.c  companion_roundrobin.c  companion_selftest.c  companion_simple_test.c  crunched_memory_reader.cpp  fft16384.cpp  file_browser.cpp  file_memory_source.cpp  gdb_connection.cpp  guest_agent.cpp  haywire_client.cpp  haywire_client_v2.cpp  hex_overlay.cpp  macos_mapped_file_enumerator.cpp  main.cpp  mapped_file_memory_source.cpp  (+19 more)
src/platform/: page_walker.cpp  process_detail_collector.cpp  process_walker.cpp
test_attempts/: check_guest_symbols.cpp  check_kernel_symbols.sh  check_membackend_live.sh  check_phys_simple.cpp  create_volatility_profile.sh  dump_init_task.cpp  find-real-swapper.mjs  find_init_task.cpp  find_kernel_base.cpp  find_kernel_phys.cpp  find_list_pointers.cpp  find_process_list.cpp  find_ttbr.cpp  get_kernel_offsets.cpp  get_real_phys.cpp  get_ttbr_gdb.cpp  parse_kcore.cpp  probe_kernel_offsets.cpp  quick_kernel_maps.sh  test-check-full-coverage.mjs  test-diagnostic.mjs  test-kernel-discovery-debug.mjs  test-kernel-discovery.mjs  test-kernel-final-mappings.mjs  test-kernel-mappings.mjs  test-kernel-va-translation.mjs  test-memory-sampling.mjs  test-mm-read.mjs  test-pgd-at-known-location.mjs  test-pgd-direct.mjs  test-pgd-entries.mjs  test-pgd-full-scan.mjs  test-pgd-index-0.mjs  test-pgd-read.mjs  test-pgd-scan.mjs  test-pgd-walk-fix.mjs  test-pgd0-full-analysis.mjs  test-pte-discovery.mjs  test-qmp-electron.mjs  test-qmp-pgd-walk.mjs  (+47 more)
web/: .env.example  .gitignore  README.md  convert-to-branded-types.ts  find-mapped-pages.js  fix-arithmetic.sh  fix-remaining-types.ts  index.html  package.json  test-branded-types.mjs  test-integration.mjs  test-open-files-direct.mjs  test-open-files-electron.mjs  test-open-files-with-kernel.mjs  test-open-files.mjs  test-page-cache.mjs  tsconfig.json  vite.config.ts
web/bridge/: CMakeLists.txt  qmp_bridge.cpp
web/electron/: main.cjs  preload.cjs
web/src/: App.vue  kernel-diagnostic.ts  kernel-discovery-paged.ts  kernel-discovery.ts  kernel-mem.ts  kernel-page-database.ts  kernel_introspection_design.md  page-cache-discovery.ts  page-info.ts  paged-memory.ts
web/wasm/: build_change_detection.sh  build_wasm.sh  change_detection.js  change_detection_wasm.cpp  (+1 more)
(+32 files in other folders)
